salesforce/force-app/main/default/objects/Convex_Connector_Settings__mdt/Convex_Connector_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the Convex CDC Connector</description>
    <label>Convex Connector Settings</label>
    <pluralLabel>Convex Connector Settings</pluralLabel>
</CustomObject>