salesforce/force-app/main/default/objects/Convex_Connector_Settings__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable or disable the CDC connector</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>