salesforce/force-app/main/default/objects/Convex_Connector_Settings__mdt/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <description>Secret key for HMAC signature verification</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>