salesforce/force-app/main/default/objects/Convex_Connector_Settings__mdt/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <description>The Convex webhook URL for CDC events</description>
    <label>Webhook URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>